--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,23 @@
 <resources>
     <string name="app_name">AppChonHinh07062022</string>
+    <string-array name="arrays_drawable">
+        <item>bo</item>
+        <item>bocanhcung</item>
+        <item>bongua</item>
+        <item>cachep</item>
+        <item>cadia</item>
+        <item>chimcanhcut</item>
+        <item>cho</item>
+        <item>chodom</item>
+        <item>chuonchuon</item>
+        <item>ech</item>
+        <item>heo</item>
+        <item>khi</item>
+        <item>meoden</item>
+        <item>meotrang</item>
+        <item>meolucky</item>
+        <item>rua</item>
+        <item>soi</item>
+        <item>voi</item>
+    </string-array>
 </resources>
